[package]
edition = "2021"
name = "anni-javascript-binding"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.11.1", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2.11.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anni-repo = "0.2.1"
anni-workspace = "0.1.0"
uuid = { version = "1", features = ["v4"] }
thiserror = "1.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
